unified gitignore to project root
Signed-off-by: Navaz Alani <nalani@uwaterloo.ca>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
+# object files in any directory
+**/*.o
+# compiled programs
+dwm/dwm
+dmenu/dmenu
 bin/dwmstat
+
+# patching leftovers
+*.orig
+*.rej
