as per usage, updated program configs & added utility and system scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # object files in any directory
 **/*.o
-# compiled programs
+
+# clangd lsp files
+compile_commands.json
+.cache/
+
+# compiled binaries
 dwm/dwm
 st/st
 bin/dwmstat
